<?xml version="1.0"?>
<package format="2">
  <name>kdl_msgs</name>
  <version>0.0.0</version>
  <description>Provides ROS messages which can be used in place of Orocos KDL types.</description>

  <maintainer email="johannes@intermodalics.eu">Johannes Meyer</maintainer>
  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/kdl_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>orocos_kdl</depend>
  <depend>std_msgs</depend>

  <test_depend>roscpp_serialization</test_depend>
  <test_depend>roscpp_traits</test_depend>

</package>
